--- a/templates/core/fieldvalue_form.jade
+++ b/templates/core/fieldvalue_form.jade
@@ -3,9 +3,9 @@ form#from-add-fact.row(action="{% url 'student-value-create' pk=object.pk %}", m
   - csrf_token
   .col-sm-5.form-group
     label Тип факта
-    select.form-control(name='field_name')
-      - for val, descr in field_types
-        option(value='{{ val }}') {{ descr }}
+    select#field-name.form-control(name='field_name')
+      - for val, verb, descr in field_types
+        option(value='{{ val }}', data-descr='{{ descr }}') {{ verb }}
   .col-sm-5.form-group
     label Значение
     input.suggest.form-control(name='field_value', type='text',
@@ -13,3 +13,5 @@ form#from-add-fact.row(action="{% url 'student-value-create' pk=object.pk %}", m
   .col-sm-2.form-group
     label &nbsp;
     button.btn.btn-default.form-control(type='submit') Добавить факт
+
+p#field-descr
