--- a/templates/core/include_vote.jade
+++ b/templates/core/include_vote.jade
@@ -13,4 +13,4 @@
       $.post url, 'csrfmiddlewaretoken=' + csrftoken, ->
         t.html '<span class="glyphicon glyphicon-ok"></span>'
     $('#tab-student').on 'click', '.btn-vote', click_vote
-    $('#student-modal').on 'click', '.btn-vote', click_vote
+    $('#student-nav').on 'click', '.btn-vote', click_vote
