--- a/templates/core/student_detail.jade
+++ b/templates/core/student_detail.jade
@@ -38,8 +38,10 @@ block content
     style.
         .field-trusted {}
         .field-untrusted {color: #aaa;}
-        .field-hidden {color: #eee;}
+        .field-hidden {color: #bbb; display: none;}
         .btn-vote {cursor: pointer;}
+        .show-hidden {display: none; cursor: pointer;}
+        .field-hidden ~ .show-hidden {display: block;}
 
     .tab-content
       #tab-student.tab-pane.active(role='tabpanel')
@@ -77,6 +79,8 @@ block content
                     | &nbsp
                     a.btn-vote(data-href="{% url 'field-vote' pk=modification.pk vote_type='to_delete' %}")
                       span.glyphicon.glyphicon-ban-circle
+            li.show-hidden
+              a ...
 
       #tab-send.tab-pane(role='tabpanel')
         br
