Add introduction to main page

--- a/templates/core/grade_list.jade
+++ b/templates/core/grade_list.jade
@@ -2,11 +2,15 @@ extends 'core/base.html'
 
 block content
 
-    h1 Список классов:
+    p.lead
+        Обновляемый список выпускников школы 57 г. Москвы с краткими контактами.
+        Если вы учились в 57 школе и можете дополнить информацию про себя или одноклассников, будьте добры, потратьте немного времени.
+        Голосуйте за или против правок, если у вас есть более точная информация.
+        Авторизуйтесь кодом выпускника (#[a(href="http://auth.alumni57.ru") auth.alumni57.ru]), чтобы вашей информации больше доверяли.
 
     - for g, l in grades
         article
-            h1
+            h2
                 a(href="{% url 'student-list' %}?year={{ g }}")
                     | {{ g }}
 
