--- a/templates/core/student_detail.jade
+++ b/templates/core/student_detail.jade
@@ -120,4 +120,6 @@ block content
         include core/fieldvalue_form
 
   .modal-footer
+    .pull-left
+      | Добавьте новую информацию или проголосуйте за/против имеющейся
     button.btn.btn-cls.btn-primary(type='button', data-dismiss='modal') Закрыть
